# exercism

solutions/rust/accumulate/1/src/: lib.rs
solutions/rust/acronym/1/src/: lib.rs
solutions/rust/all-your-base/1/src/: lib.rs
solutions/rust/all-your-base/2/src/: lib.rs
solutions/rust/allergies/1/src/: lib.rs
solutions/rust/anagram/1/src/: lib.rs
solutions/rust/armstrong-numbers/1/src/: lib.rs
solutions/rust/atbash-cipher/1/src/: lib.rs
solutions/rust/binary-search/1/src/: lib.rs
solutions/rust/binary-search/2/src/: lib.rs
solutions/rust/bob/1/src/: lib.rs
solutions/rust/bob/2/src/: lib.rs
solutions/rust/bottle-song/1/src/: lib.rs
solutions/rust/bottle-song/2/src/: lib.rs
solutions/rust/bowling/1/src/: lib.rs
solutions/rust/bowling/2/src/: lib.rs
solutions/rust/bowling/3/src/: lib.rs
solutions/rust/clock/1/src/: lib.rs
solutions/rust/clock/2/src/: lib.rs
solutions/rust/collatz-conjecture/1/src/: lib.rs
solutions/rust/custom-set/1/src/: lib.rs
solutions/rust/decimal/1/src/: lib.rs
solutions/rust/decimal/2/src/: lib.rs
solutions/rust/decimal/3/src/: lib.rs
solutions/rust/decimal/4/src/: lib.rs
solutions/rust/decimal/5/src/: lib.rs
solutions/rust/decimal/6/src/: lib.rs
solutions/rust/dot-dsl/1/src/: lib.rs
solutions/rust/dot-dsl/2/src/: lib.rs
solutions/rust/eliuds-eggs/1/src/: lib.rs
solutions/rust/etl/1/src/: lib.rs
solutions/rust/fizzy/1/src/: lib.rs
solutions/rust/parallel-letter-frequency/2/: Cargo.toml
solutions/rust/react/3/: Cargo.toml
solutions/rust/react/3/src/: lib.rs
(+88 files in other folders)
