[package]
name = "react"
version = "0.1.0"
edition = "2024"

# Not all libraries from crates.io are available in Exercism's test runner.
# The full list of available libraries is here:
# https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
[dependencies]
uuid = { version = "1.17.0", features = ["v4"] }

[lints.clippy]
new_without_default = "allow"
